Fix/avant lancement (#29)
* correction rapport

* ajout infobulle dans le rapport

* améliorationarrivants